--- a/index_wordpress.html
+++ b/index_wordpress.html
@@ -35,7 +35,7 @@
     <main>
 
       <div class="colonna_sx">
-        <h4><i class="fas fa-rss-square"></i>Organic Themes</h4>
+        <h4><i class="fas fa-rss-square rss"></i> Organic Themes</h4>
         <br>
         <a href="#">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</a><br>
         <br>
@@ -45,13 +45,14 @@
         <br>
         <a href="#">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</a><br>
         <br>
+
       </div>
 
       <div class="colonna_cent">
         <h2>THREE COLUMN</h2>
         <br>
         <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet   Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet <br>
-        <br>Lorem ipsum dolor sit ametbr Lorem ipsum dolor sit amet Lorem ipsum dolor sit ametLorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem Lorem ipsumipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet <a href="#">example link </a>dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
+        <br>Lorem ipsum dolor sit ametbr Lorem ipsum dolor sit amet Lorem ipsum dolor sit ametLorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem Lorem ipsumipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet <a href="#">example link </a>dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
       </div>
 
       <div class="colonna_dx">
@@ -61,13 +62,9 @@
       </div>
 
       <div class="colonna_dx_2">
-        <h3>Recent Post Widget</h3><br>
+        <h4>Recent Post Widget</h4><br>
         <a href="#">Outdoors Styles</a><br><br>
       </div>
-
-
-
     </main>
-
   </body>
 </html>
