--- a/index_wordpress.html
+++ b/index_wordpress.html
@@ -12,8 +12,14 @@
 
     <header>
       <div class="opacity"></div>
-      <div class="icon">
+      <div class="icon_big">
         <i class="fas fa-mountain"></i>
+      <div class="icon_small_sx">
+        <i class="fas fa-mountain"></i>
+      </div>
+      <div class="icon_small_dx">
+        <i class="fas fa-mountain"></i>
+      </div>
       </div>
       <div class="titolo_icona">
         <h1>NATURAL</h1>
